--- a/main.html
+++ b/main.html
@@ -59,6 +59,11 @@
     <div class="form">
         <div class="container">
             <input type="text" placeholder="Hello.."/>
+            <input type="text" placeholder="Hello.."/>
+            <input type="text" placeholder="Hello.."/>
+            <input type="text" placeholder="Hello.."/>
+            <input type="text" placeholder="Hello.."/>
+
         </div>
     </div>
 
